--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "axios": "^1.1.3",
     "eslint-config-prettier": "^8.5.0",
+    "moment": "^2.29.4",
     "next": "13.0.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
+    "@types/react-geocode": "^0.2.1",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
