--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.0.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-geocode": "^0.2.3"
   },
   "devDependencies": {
     "@types/node": "18.11.8",
