--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.16.0",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "axios": "^1.1.3",
     "eslint-config-prettier": "^8.5.0",
